smartemission/services/geoserver/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: geoserver-deployment
  namespace: smartemission
  labels:
    app: geoserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: geoserver
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: geoserver
    spec:
      containers:
      - name: geoserver
        image: smartemission/se-geoserver:2.12.1-3
        livenessProbe:
          httpGet:
            path: /geoserver/web/
            port: 8080
          initialDelaySeconds: 240
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /geoserver/web/
            port: 8080
          initialDelaySeconds: 240
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          limits:
            cpu: "500m"
            memory: "6.0Gi"
          requests:
            cpu: "500m"
            memory: "3.0Gi"
        ports:
        - containerPort: 8080
