smartemission/services/geoserver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: geoserver-service
  namespace: smartemission
  labels:
    app: geoserver
spec:
  ports:
  - port: 8080
  selector:
    app: geoserver
