smartemission/services/geoserver/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geoserver
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: pdok-smartemission-nl-tls
    hosts:
    - pdok.smartemission.nl
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /geoserver
        backend:
          serviceName: geoserver-service
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geoserver-basic-auth
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /geoserver/web
        backend:
          serviceName: geoserver-service
          servicePort: 8080
